--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,42 @@
 /*  your css code here. If applicable */
+/* Set background color using :root */
+:root {
+  background-color: rgb(135, 206, 235);
+}
+
+/* Paragraph Styling */
+article p:first-child {
+  background-color: black;
+  color: white;
+}
+
+article p:nth-child(2) {
+  color: initial; /* default text color */
+}
+
+article p:last-child {
+  color: red;
+}
+
+/* List Styling */
+ul li {
+  background-color: gray;
+  width: 50%;
+  padding: 10px;
+}
+
+/* Odd items with white background */
+ul li:nth-child(odd) {
+  background-color: white;
+}
+
+/* First and last items with larger font */
+ul li:first-child,
+ul li:last-child {
+  font-size: 22px;
+}
+
+/* Third-to-last item (Item 3 in a 5-item list) */
+ul li:nth-last-child(3) {
+  background-color: pink;
+}
